--- a/style.css
+++ b/style.css
@@ -1571,3 +1571,47 @@ footer
 
   
 
+
+/* SLIDER */
+
+.slider-container
+{
+
+    padding-top: 100px;
+    padding-bottom: 150px;
+}
+
+.slider
+{
+    padding-left: 50px;
+    padding-right: 20px;
+    /* border: solid #1290a4 2px; */
+}
+.slick-prev:before, .slick-next:before {
+    font-family: 'slick';
+    font-size: 40px;
+    line-height: 1;
+    opacity: .75;
+    color: #1290a4;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.slider-img
+{
+    width: 100%;
+    height: 100%;
+    border: solid #1290a4 3px;
+}
+.slider-title>p
+{
+    font-size: 50px;
+    color: #1f1f1f;
+    font-weight: 700;
+    letter-spacing: -5px;
+    text-align: center;
+    padding-bottom: 20px;
+}
+/* .slick-prev:before
+{
+    padding-right: 120px;
+} */
